--- a/deploy.yml
+++ b/deploy.yml
@@ -6,6 +6,9 @@
  
 
   tasks:
+    - name: Install Java/Jdk
+      apt: name=openjdk-11-jre-headless status=started
+      
     - name: Install Tomcat9
       apt: name=tomcat9 status=started
       
