--- a/deploy.yml
+++ b/deploy.yml
@@ -7,8 +7,8 @@
  
 
   tasks:
-    - name: Update ubuntu and packages
-      apt: name="*" state=latest
+    - name: Update ubuntu 
+      apt: update_cache=yes
       
     - name: Install Java/Jdk
       apt: name=openjdk-11-jre-headless state=present
