--- a/deploy.yml
+++ b/deploy.yml
@@ -7,7 +7,7 @@
  
 
   tasks:
-    - name: Update ubuntu 
+    - name: Update ubuntu (apt update)
       apt: update_cache=yes
       
     - name: Install Java/Jdk
